<resources>
    <string name="app_name">MovLib</string>
    <string name="favorites">favorites</string>
    <string name="music">music</string>
    <string name="places">places</string>
    <string name="news">news</string>
    <string name="profile">profile</string>
    <string name="premieres">premieres</string>
    <string name="search">search</string>
    <string name="watchlist">watchlist</string>
    <string name="watched">watched</string>
    <string name="recommendation">recommendation</string>
    <string name="api_key">f753872c7aa5c000e0f46a4ea6fc49b2</string>
</resources>