<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_new"
        android:title="@string/premieres"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_watch_later_24"
        android:title="@string/watchlist"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_tv_24"
        android:title="@string/watched"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_recommend_24"
        android:title="@string/recommendation"/>
</menu>

